<resources>
    <string name="hello">Hello World, HelloWorld2!</string>
    <string name="app_name">Mediatek Connectivity Combo Tool v1.5</string>
    <string name="app_name_ver">Mediatek Connectivity Combo Tool v1.5</string>
    <string name="basic_tool">Mediatek Connectivity Tool(Basic_Tool)</string>
    <string name="advanced_tool">Mediatek Connectivity Tool(Advanced_Tool)</string>
	<string name="str_service_online">str_service_online</string>
	<string name="str_button2">str_button2</string>
	<string name="str_service_offline">str_service_offline</string>
	<string name="str_error_stopservice">str_error_stopservice</string>
	<string name="str_message_from_service">str_message_from_service</string>
	<string name="str_button1">str_button1</string>
	<string name="Basic_Tool">Basic_Tool</string>
	<string name="Advanced_Tool">Advanced_Tool</string>
	<string name="Enable_WFA_Test">Enable WFA Test</string>
	<string name="Enable_CTIA_Test">Enable CTIA Test</string>
	<string name="Connect">Connect</string>
	<string name="Disconnect">Disconnect</string>
	<string name="Scan">Scan</string>
	<string name="StopScan">Stop</string>
	<string name="SSID">SSID: </string>
	<string name="mtklab">mtklab</string>
	<string name="PASSWORD">PASSWORD:</string>
	<string name="Default_Password">12345678 </string>
	<string name="RSSI_Threshold">RSSI Threshold</string>
	<string name="Default_Threshold">-70</string>
	<string name="Status">Status:</string>
	<string name="Disconnected">Disconnected </string>
	<string name="Rst_RSSI">RSSI = ? dBm</string>
	<string name="Result">Result:</string>
	<string name="Tmp">\?</string>
	<string name="Inquiry">Inquiry</string>
	<string name="Stop_Inquiry">Stop Inquiry</string>
  	<string name="bt_tx_pattern_text">Tx Pattern:</string>
  	<string name="bt_channel_text">Channel:</string>
  	<string name="bt_tx_frequency_text">Tx Frequency:</string>
  	<string name="bt_tx_frequency_edit">20</string>
  	<string name="bt_packet_type_text">Packet Type:</string>
  	<string name="bt_packet_length_text">Packet Length:</string>
  	<string name="bt_packet_length_edit">200</string>
  	<string name="bt_tx_power_text">Tx Power:</string>
  	<string name="bt_tx_power_edit">50</string>
  	<string name="bt_tx_modulation_text">Modulation:</string>
  	<string name="bt_tx_modulation_edit">mode?</string>
  	<string name="bt_rx_pattern_text">Rx Pattern:</string>
  	<string name="bt_rx_packet_type_text">Rx Packet Type:</string>
  	<string name="bt_rx_frequency_text">Rx Frequency\n[0-78]:</string>
  	<string name="bt_rx_frequency_edit">60</string>
  	<string name="bt_rx_tester_address_text">Tester Address\n(Hex):</string>
  	<string name="bt_rx_tester_address_edit">ab:a3:21:3a:4f:2d</string>
  	<string name="bt_rx_packet_count_text">Rx Packet Count:</string>
  	<string name="bt_rx_packet_count_content">0</string>
  	<string name="bt_rx_pacekt_error_rate_text">Packet Error Rate:</string>
  	<string name="bt_rx_pacekt_error_rate_content">0.000%</string>
  	<string name="bt_rx_byte_count_text">Rx Byte Count:</string>
  	<string name="bt_rx_byte_count_content">0</string>
  	<string name="bt_rx_bit_error_rate_text">Bit Error Rate:</string>
  	<string name="bt_rx_bit_error_rate_content">0.000%</string>
  	<string name="bt_go">Start</string>
	<string name="bt_stop">Stop</string>
	<string name="bt_enable">Enable</string>
	<string name="bt_disable">Disable</string>
	<string name="bt_testmode_powerlevel_text">Power Level[0,7]: </string>
	<string name="bt_testmode_powerlevel_edit">5</string>
	<string name="OK">OK</string>
	<string name="Error">Error</string>
    <string name="Success">Success</string>
	<string name="BT_turn_bt_off">Please turn off Bluetooth first</string>
	<string name="BT_no_dev">No bluetooth device found</string>
	<string name="BT_init_dev">Please wait for device to initialize ...</string>
	<string name="BT_relayer_start">BT relayer is initializing, please wait...</string>
 	<string name="BT_open">Please wait for Bluetooth to turn on ...</string>
 	<string name="BT_close">Please wait for Bluetooth to turn off ...</string>
 	<string name="BT_exit_em">SSP Debug mode is open, exit EngineerMode Bluetooth test.</string>
  	<string name="BT_data_fail">Transmit data failed, please try again.</string>
    <string name="BT_tx_test">Tx test operation is in process, please wait ...</string>
    <string name="BT_no_sig_rx_fail">No signal rx test failed.</string>
    <string name="BTRxTitle">Bluetooth_Rx</string>
    <string name="wifi_freqoffset_text">FreqOffset: </string>
    <string name="wifi_freqoffset_edit">30</string>
    <string name="wifi">WiFi</string>
    <string name="wifi_item_tx">Tx</string>
    <string name="wifi_item_rx">Rx</string>
    <string name="wifi_item_mcr">MCR</string>
    <string name="wifi_item_nvram">NVRAM</string>
    <string name="wifi_item_dpd">DPD Calibration</string>
    <string name="wifi_item_tem">Temperature Sensor</string>
    <string name="wifi_dialog_warn">Error</string>
    <string name="wifi_dialog_warn_message">Please turn off Wi-Fi first</string>
    <string name="wifi_dialog_init">Progress</string>
    <string name="wifi_dialog_init_message">Please wait for device to initialize ...</string>
    <string name="wifi_dialog_fail">Error</string>
    <string name="wifi_dialog_fail_message">Enable Wi-Fi failed</string>
    <string name="wifi_dialog_error">Error</string>
    <string name="wifi_dialog_error_message">Wifi is not initialized</string>
    <string name="wifi_dialog_input_file_name">Please input a file name</string>
    <string name="wifi_toast_select_error">item select error</string>
    <string name="wifi_toast_packet_error">"Do not accept packet count = 0, unlimited on Android"</string>
    <string name="wifi_ok">OK</string>
    <string name="wifi_empty"></string>
    <string name="wifi_zero">0</string>
    <string name="wifi_tx">WiFi_Tx</string>
    <string name="wifi_rx">WiFi_Rx</string>
    <string name="wifi_eeprom">WiFi_NVRAM</string>
    <string name="wifi_temperature_sensor">WiFi_Temperature_Sensor</string>
    <string name="wifi_mcr">WiFi_MCR</string>
    <string name="wifi_channel_text">Channel:</string>
    <string name="wifi_preamble">Preamble:</string>
    <string name="wifi_preamble11n">11nPreamble:</string>
    <string name="wifi_pkt_text">Pkt length:</string>
    <string name="wifi_pkt_edit">1024</string>
    <string name="wifi_pktcnt_text">Pkt cnt:</string>
    <string name="wifi_pktcnt_edit">3000</string>
    <string name="wifi_pktLength_text">Pkt Length:</string>
    <string name="wifi_pktLength_edit">1024</string>
    <string name="wifi_GIType">GIType: </string>
    <string name="wifi_tx_text">Tx Power(dBm):</string>
    <string name="wifi_tx_edit">18.0</string>
    <string name="wifi_tx_gain_edit">22</string>
    <string name="wifi_tx_gain_format">%.1f</string>
    <string name="wifi_rate_text">Rate:</string>
    <string name="wifi_mode_text">Mode:</string>
    <string name="wifi_xtaltrim_text">Xtal Trim:</string>
    <string name="wifi_xtaltrim_edit"></string>
    <string name="wifi_xtaltrim_read">Read</string>
    <string name="wifi_xtaltrim_write">Write</string>
    <string name="wifi_alc">ALC Function for Normal Packet Tx/Rx</string>
    <string name="wifi_bandwidth">Bandwidth:</string>
    <string name="wifi_guard_interval">Guard interval:</string>
    <string name="wifi_go">Start</string>
    <string name="wifi_stop">Stop</string>
    <string name="wifi_fcs_text">FCS ERR:</string>
    <string name="wifi_fcs_content">0</string>
    <string name="wifi_rx_text">RX OK:</string>
    <string name="wifi_rx_content">0</string>
    <string name="wifi_per_text">PER:</string>
    <string name="wifi_per_content">0%</string>
    <string name="wifi_wordaccess_text">WORD Access:</string>
    <string name="wifi_addr_text">addr(h,byte):</string>
    <string name="wifi_addr_content"></string>
    <string name="wifi_value_text">value(h):</string>
    <string name="wifi_value_content"></string>
    <string name="wifi_read_word">Read</string>
    <string name="wifi_write_word">Write</string>
    <string name="wifi_stringaccess_text">Byte String Access:</string>
    <string name="wifi_addr_text_string">addr(h,byte):</string>
    <string name="wifi_addr_content_string"></string>
    <string name="wifi_length_text_string">length(byte):</string>
    <string name="wifi_length_content_string"></string>
    <string name="wifi_value_text_string">value(h):</string>
    <string name="wifi_value_content_string"></string>
    <string name="wifi_savebtn">NVRAM Save As File</string>
    <string name="wifi_burnbtn">Burn From File</string>
    <string name="wifi_readallbtn">Read All</string>
    <string name="wifi_clearbtn">Clear</string>
    <string name="wifi_misc_text">Temperature sensor measurement:</string>
    <string name="wifi_misc_gobtn">Go</string>
    <string name="wifi_guardinterval_text">Guard \nINterval:</string>
    <string name="wifi_misc_stopbtn">Stop</string>
    <string name="wifi_misc_clearbtn">Clear</string>
    <string name="wifi_mcr_text">MCR:</string>
    <string name="wifi_mcr_addr_text">Addr(h):</string>
    <string name="wifi_mcr_value_text">Value(h):</string>
    <string name="wifi_mcr_readbtn">Read</string>
    <string name="wifi_mcr_writebtn">Write</string>
    <string name="wifi_eeprom_save_dialog_title">Save as</string>
    <string name="wifi_eeprom_save_dir">Please input a file name</string>
    <string name="wifi_eeprom_save_dir_done">OK</string>
    <string name="file_list_title">Please select a file to burn</string>
    <string name="wifi_dpd_text">DPD calibration:</string>
    <string name="wifi_dpd_calibration">calibration</string>
    <string name="wifi_dpd_import">import DPD parameters from file</string>
    <string name="wifi_dpd_read">read DPD parameters</string>
    <string name="wifi_dpd_save">save DPD parameters to file</string>
    <string name="wifi_dpd_info"></string>
    <string name="wifi_wfa_enabler">Enable WFA test UI</string>
    <string name="wifi_ctia_enabler">Enable CTIA test UI</string>
    <string name="wifi_help_msg" product="default">
    

    Feature name: WiFi\n\n
    Used to do WiFi test and check WiFi status by RD.\n\n
    There are 4 test items: Tx, Rx, MCR, NVRAM and some check boxes as a switch.\n\n
    Tx: Test WiFi send packages at different frequencies, rates, power and so on. It needs special instruments to analyze the results.\n\n
    Rx: Test WiFi receive packages at different frequencies and bandwidth. It will show the results of received packages.\n\n
    MCR: Read and write WiFi control register. Warning: The operation of non-professionals is forbidden.\n\n
    NVRAM: Read and write WiFi NVRAM, could accessed in word or byte string.\n\n
    Switch: Some switches used by RD.\n\n</string>
</resources>